# BitVaram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  varam.py
BitVaram/: CMakeLists.txt
BitVaram/detail/: AST.inl  config.inl
BitVaram/include/: AST.h  BitVaram.h  cmdline.h  common.hpp  config.h  context.h  lexer.h  parser.h  preprocessor.h  token.h
BitVaram/src/: AST.cpp  BitVaram.cpp  IRcompiler.cpp  config.cpp  context.cpp  lexer.cpp  parser.cpp  preprocessor.cpp  token.cpp
BitVaram/vm_py/: environment.py  limits.py  memory.py  stack.py  symbol_table.py  variable.py  vm.py
BitVaram/vm_py/types/: function.py  integer.py
bytecode/: bytecode.h
cmdsys/: Operation.cpp  Operation.h  OperationAdd.cpp  OperationAdd.h
core/: Config.cpp  Config.h  types.h
doc/: functional_model.txt  memory_model.txt  syntax.txt
exceptions/: BitLineExeption.cpp  BitLineExeption.h  ExOutOfBitLine.cpp  ExOutOfBitLine.h  ExStackOverflow.cpp  ExStackOverflow.h  ExStackUnderflow.cpp  ExStackUnderflow.h  ExTypeMismatch.cpp  ExTypeMismatch.h  StackException.cpp  StackException.h  TypeException.cpp  TypeException.h
memory/: BitLine.cpp  BitLine.h  Block.cpp  Block.h
value/: Arythmetic.h  ByteArythmetic.cpp  ByteArythmetic.h  Converter.cpp  Converter.h  FloatArythmetic.cpp  FloatArythmetic.h  IntArithmetic.cpp  IntArithmetic.h  Value.cpp  Value.h
vm/: CallStack.cpp  CallStack.h  Programm.cpp  Programm.h  Stack.cpp  Stack.h
